Closed
Bug 1803471
Opened 3 years ago
Closed 3 years ago
Perma /builds/worker/checkouts/gecko/build/clang-plugin/NonParamInsideFunctionDeclChecker.cpp:19:69: error: cannot initialize a parameter of type 'LangAS' with an rvalue of type 'int'
Categories
(Firefox Build System :: Toolchains, defect, P5)
Firefox Build System
Toolchains
Tracking
(firefox109 fixed)
RESOLVED
FIXED
109 Branch
| Tracking | Status | |
|---|---|---|
| firefox109 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: glandium)
Details
Attachments
(1 file)
Filed by: mh [at] glandium.org
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=398255598&repo=toolchains
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/azFPwtdxSYaASBoR-tchVg/runs/0/artifacts/public/logs/live_backing.log
[task 2022-12-01T00:18:22.107Z] 00:18:22 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/NonParamInsideFunctionDeclChecker.cpp:19:69: error: cannot initialize a parameter of type 'LangAS' with an rvalue of type 'int'
[task 2022-12-01T00:18:22.107Z] 00:18:22 INFO - unsigned PointerAlign = Context.getTargetInfo().getPointerAlign(0);
[task 2022-12-01T00:18:22.107Z] 00:18:22 INFO - ^
[task 2022-12-01T00:18:22.111Z] 00:18:22 INFO - /builds/worker/fetches/clang/include/clang/Basic/TargetInfo.h:446:35: note: passing argument to parameter 'AddrSpace' here
[task 2022-12-01T00:18:22.111Z] 00:18:22 INFO - uint64_t getPointerAlign(LangAS AddrSpace) const {
[task 2022-12-01T00:18:22.111Z] 00:18:22 INFO - ^
[task 2022-12-01T00:18:22.111Z] 00:18:22 INFO - 1 error generated.
| Assignee | ||
Updated•3 years ago
|
Assignee: nobody → mh+mozilla
| Assignee | ||
Comment 1•3 years ago
|
||
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox Build System::Toolchains' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Component: General → Toolchains
| Assignee | ||
Comment 3•3 years ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/d2a59a26ebbb
Adjust clang plugin to upstream changes on trunk. r=firefox-build-system-reviewers,ahochheiden
Comment 5•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox109:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•