Bug 1803471 - Adjust clang plugin to upstream changes on trunk. r=firefox-build-system-reviewers,ahochheiden

Differential Revision: https://phabricator.services.mozilla.com/D163538